<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_margin="20dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_margin="5dp"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnScanActivity"
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/blue_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/barcode_scanner"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnViewScan"
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/blue_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/view_scan"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnChartPieActivity"
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/blue_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/pie_chart"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnBartChartActivity"
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/blue_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bar_chart"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </GridLayout>

    </LinearLayout>


</ScrollView>